Fixed some spacing issues

--- a/style.css
+++ b/style.css
@@ -27,17 +27,13 @@ button {
     display:grid;
     width:100vw;
     height:100vh;
-    grid-template-columns: 1fr 3fr;
+    grid-template-columns: 1fr 5fr;
     grid-template-rows: 1fr 5fr;
 }
 
 /* ################ TEMPORARY CODE START, ADDS BORDER LINES #################### */
 .container > div {
     border: 1px solid black;
-}
-
-.user-items > div, .maintenance-items > div , .logo  {
-    padding:6% 2%;
 }
 
 /* ############### TEMPORARY CODE END ##############3 */
@@ -49,11 +45,14 @@ button {
 
 .sidebar {
     grid-template-rows: 1fr 3fr 4fr;
-    padding: 3%;
     grid-column: 1 / 2;
     grid-row: 1 / 3;
-    
 }
+
+.sidebar > div  {
+    margin: 3% 2%;
+}
+
 /* ########################## SIDEBAR ##############################*/
 
 /* ########################## HEADER ########################*/
@@ -111,4 +110,5 @@ button {
 .content {
     grid-column: 2 / 3;
     grid-row: 2 / 3;
+    display:grid;
 }
